name:                hasciigram
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/msrdic/hasciigram
license:             BSD3
license-file:        LICENSE
author:              Mladen Srdić
maintainer:          m.s.qubits@gmail.com
copyright:           2017 Mladen Srdić
category:            Console
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hasciigram
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/msrdic/hasciigram
